--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -4,3 +4,6 @@
     <li><%= link_to task.title, task_path(task) %><li>
   <% end %>
 </ul>
+<br>
+<br>
+<p><%= link_to "Add a new task", new_task_path %></p>
