--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -3,4 +3,5 @@
 <p>Completed? <%= @task.completed %></p>
 <br>
 <br>
-<%= link_to "Return to index", index_path %>
+<%= link_to "Edit this task", edit_task_path %>
+<%= link_to "Return to index", tasks_path %>
