--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -3,5 +3,6 @@
 <p>Completed? <%= @task.completed %></p>
 <br>
 <br>
-<%= link_to "Edit this task", edit_task_path %>
-<%= link_to "Return to index", tasks_path %>
+<p><%= link_to "Edit this task", edit_task_path %></p>
+<p><%= link_to "Delete this task", task_path(@task), method: :delete, data: { confirm: "Are you sure?" } %></p>
+<p><%= link_to "Return to index", tasks_path %></p>
